--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.itextpdf-5.4.2.jar=lib\\itextpdf-5.4.2.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=lib/mysql-connector-java-5.1.42-bin.jar
+file.reference.pdfbox-app-2.0.8.jar=lib\\pdfbox-app-2.0.8.jar
+file.reference.poi-3.9.jar=lib\\poi-3.9.jar
+file.reference.poi-ooxml-3.11.jar=lib\\poi-ooxml-3.11.jar
 file.reference.rxtx-2.2.jar=lib/rxtx-2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.rxtx-2.2.jar}:\
     ${file.reference.itextpdf-5.4.2.jar}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.pdfbox-app-2.0.8.jar}:\
+    ${file.reference.poi-ooxml-3.11.jar}:\
+    ${file.reference.poi-3.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
